fixes placeholder text in dark mode

--- a/app/components/vis-bug/vis-bug.element.css
+++ b/app/components/vis-bug/vis-bug.element.css
@@ -234,6 +234,7 @@
   &::placeholder {
     font-weight: lighter;
     font-size: 0.8em;
+    color: var(--theme-icon_color);
   }
 }
 
